--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,8 @@
 <ul>
     <li><a th:href="@{/member/join}">회원가입</a></li>
     <li><a th:href="@{/member/list}">회원목록</a></li>
+    <li><a th:href="@{/board/insert}">게시글등록</a></li>
+    <li><a th:href="@{/board/list(page=0)}">게시글목록</a></li>
 </ul>
 </body>
 </html>
