--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,6 +7,12 @@
     <style>
         .active{font-size:1.5em;}
     </style>
+    <script th:inline="javascript">
+        let msg=[[${msg}]]
+        if (msg!=null) {
+            alert(msg);
+        }
+    </script>
 </head>
 <body>
 <div class="container">
